<resources>
    <string name="app_name">Quick Arithmetic</string>
    <string name="directions">Click the empty box and press the start button to play.</string>
    <string name="startBtnText">Start</string>
    <string name="leaderboardHeader">Top 3 fastest times with 100% accuracy</string>
    <string name="slot1">1: </string>
    <string name="slot2">2: </string>
    <string name="slot3">3: </string>
    <string name="impossibleModeSwitchText">Impossible Mode?</string>
    <string name="impossibleModeRecord">Fastest time in impossible mode: </string>
    <string name="enterBtnText">\u2713</string>
    <string name="backBtnText">\u2190</string>
    <string name="quitBtnText">\u21A9</string>
    <string name="backspace">\u232B</string>
    <string name="one_btn">1</string>
    <string name="two_btn">2</string>
    <string name="three_btn">3</string>
    <string name="four_btn">4</string>
    <string name="five_btn">5</string>
    <string name="six_btn">6</string>
    <string name="seven_btn">7</string>
    <string name="eight_btn">8</string>
    <string name="nine_btn">9</string>
    <string name="zero_btn">0</string>
</resources>