<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <TextView
            android:id="@+id/quickArithmetic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:scaleX="3"
            android:scaleY="3"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adView" />

        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/startBtnText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quickArithmetic" />

        <TextView
            android:id="@+id/leaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/leaderboardHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startBtn" />

        <TextView
            android:id="@+id/firstPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/slot1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard" />

        <TextView
            android:id="@+id/secondPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/slot2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstPlace" />

        <TextView
            android:id="@+id/thirdPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/slot3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondPlace" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/impossible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/impossibleModeSwitchText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdPlace" />

        <TextView
            android:id="@+id/impossibleLeaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/impossibleModeRecord"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/impossible" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></com.google.android.gms.ads.AdView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <Button
            android:id="@+id/eight_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="150dp"
            android:text="@string/eight_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/five_btn" />

        <Button
            android:id="@+id/zero_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="150dp"
            android:text="@string/zero_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eight_btn" />

        <Button
            android:id="@+id/seven_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="4dp"
            android:text="@string/seven_btn"
            app:layout_constraintEnd_toStartOf="@+id/eight_btn"
            app:layout_constraintTop_toBottomOf="@+id/four_btn" />

        <Button
            android:id="@+id/nine_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:text="@string/nine_btn"
            app:layout_constraintStart_toEndOf="@+id/eight_btn"
            app:layout_constraintTop_toBottomOf="@+id/six_btn" />

        <Button
            android:id="@+id/five_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="150dp"
            android:text="@string/five_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/two_btn" />

        <Button
            android:id="@+id/six_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:text="@string/six_btn"
            app:layout_constraintStart_toEndOf="@+id/five_btn"
            app:layout_constraintTop_toBottomOf="@+id/three_btn" />

        <Button
            android:id="@+id/four_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="4dp"
            android:text="@string/four_btn"
            app:layout_constraintEnd_toStartOf="@+id/five_btn"
            app:layout_constraintTop_toBottomOf="@+id/one_btn" />

        <Button
            android:id="@+id/three_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:text="@string/three_btn"
            app:layout_constraintStart_toEndOf="@+id/two_btn"
            app:layout_constraintTop_toBottomOf="@+id/fifthA" />

        <Button
            android:id="@+id/one_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:text="@string/one_btn"
            app:layout_constraintEnd_toStartOf="@+id/two_btn"
            app:layout_constraintTop_toBottomOf="@+id/fifthQ" />

        <EditText
            android:id="@+id/firstQ"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck, LabelFor" />

        <EditText
            android:id="@+id/secondQ"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstQ"
            tools:ignore="SpeakableTextPresentCheck, LabelFor" />

        <EditText
            android:id="@+id/thirdQ"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondQ"
            tools:ignore="SpeakableTextPresentCheck, LabelFor" />

        <EditText
            android:id="@+id/fourthQ"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdQ"
            tools:ignore="SpeakableTextPresentCheck, LabelFor" />

        <EditText
            android:id="@+id/fifthQ"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourthQ"
            tools:ignore="SpeakableTextPresentCheck, LabelFor" />

        <EditText
            android:id="@+id/firstA"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="238dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck, LabelFor" />

        <EditText
            android:id="@+id/secondA"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="238dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstA"
            tools:ignore="SpeakableTextPresentCheck, LabelFor" />

        <EditText
            android:id="@+id/thirdA"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="238dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="numberSigned"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondA"
            tools:ignore="SpeakableTextPresentCheck, LabelFor" />

        <EditText
            android:id="@+id/fourthA"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="238dp"
            android:layout_marginTop="96dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondA"
            tools:ignore="SpeakableTextPresentCheck, LabelFor" />

        <EditText
            android:id="@+id/fifthA"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="238dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourthA"
            tools:ignore="SpeakableTextPresentCheck, LabelFor" />

        <Button
            android:id="@+id/enterBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:text="@string/enterBtnText"
            app:layout_constraintStart_toEndOf="@+id/zero_btn"
            app:layout_constraintTop_toBottomOf="@+id/nine_btn" />

        <Button
            android:id="@+id/backBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="4dp"
            android:text="@string/backBtnText"
            app:layout_constraintEnd_toStartOf="@+id/zero_btn"
            app:layout_constraintTop_toBottomOf="@+id/seven_btn" />

        <Button
            android:id="@+id/quitBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/quitBtnText"
            app:layout_constraintEnd_toStartOf="@+id/one_btn"
            app:layout_constraintTop_toBottomOf="@+id/fifthQ" />

        <Button
            android:id="@+id/backspace"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/backspace"
            app:layout_constraintStart_toEndOf="@+id/three_btn"
            app:layout_constraintTop_toBottomOf="@+id/fifthQ" />

        <Button
            android:id="@+id/two_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="12dp"
            android:text="@string/two_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fifthQ" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>